fixed .sim-wrap and free .sim-panel

--- a/public/stylesheets/cope-style.css
+++ b/public/stylesheets/cope-style.css
@@ -400,24 +400,36 @@
   display: block;
   position: relative;
   width: 100%;
-  padding: 0 30px;
+  max-height: 80vh;
+  padding: 0;
+  overflow: hidden;
+}
+
+.purely-app .sim-sections {
+  display: block;
+  position: relative;
+  width: 120%;
+  height: 400px;
+  overflow: scroll;
+  padding-right: 20%;
+}
+.purely-app .sim-sections > div {
+  display: block;
+  width: 100%;
 }
 
 .purely-app .sim-panel {
   display: block;
   position: relative;
   width: 100%;
-  max-height: 80vh;
   padding: 0 15px;
   margin: 20px 0;
-  overflow: scroll;
 }
 .purely-app .sim-panel > div {
   padding: 16px 0;
 }
 .purely-app .sim-panel .inner {
-  overflow: auto;
-  max-height: 60vh;
+  margin: 16px 0;
 }
 
 /* Graph */
@@ -461,16 +473,17 @@
     padding: 16px;
   }
   .purely-app .sim-wrap {
+    position: fixed;
     width: 50%;
   }
   .purely-app .sim-panel {
-    position: fixed;
-    width: 100%;
-    max-width: 500px;
+    /*position: fixed;*/
+    width: 50%;
+    max-width: 420px;
     padding: 0 15px;
     left: 50%;
-    top: 80px;
     margin-bottom: 40px;
+    margin-left: 30px;
   }
 }
 
